fix navbar collapse not toggling in medium screen breakpoint, reduce margin to the left of navbar brand in mobile screen size

--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,9 @@ button[type=submit] {
         font-size: 1.2rem;
     }
 
-    
+    .navbar-brand {
+        margin-left: 10px;
+    }
 }
 
 @media screen and (max-width:992px) {
